--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 					<div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
 						<div class="contents">
 
-							<h2>CodeIN Community </h2>
-							<p>CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
+							<h2>Innovative developer Community </h2>
+							<p>Innovative developer Community is the Community of more than 8,000+ Coding Enthusiasts.
 								Where we organize Events, Hackathons, and Workshops on different Technologies.
 								Also, We Share Resources, Roadmaps to learn different technologies and share
 								opportunities related to Internships and different tech programs.
